@@ -73,6 +73,8 @@ bzr-svn 0.4.4	UNRELEASED
 
    * Avoid crashes on sending empty diffs over http/svn+SCHEME (#159111)
 
+   * Decent progress bar for "svn-import". (#127933)
+
   DOCUMENTATION
 
    * Add simple FAQ file. (#144388)
